--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,9 @@
         </h1>
       
       <hr>
-      <app-server></app-server>
+      <app-server></app-server> 
+      <app-success-alert></app-success-alert> 
+      <app-warning-alert></app-warning-alert> 
       </div>
     </div>
   </div>
