--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,14 @@
         </h1>
       
       <hr>
+      <div class="alert">
+        {{serverName}} with id {{serverId}} is {{getServerStatus()}}
+    </div>
+    <button class=" btn btn-danger" disabled>Click</button>
       <app-server></app-server> 
       <app-success-alert></app-success-alert> 
-      <app-warning-alert></app-warning-alert> 
+      <!-- <app-warning-alert></app-warning-alert>  -->
+      <div app-warning-alert></div>
       </div>
     </div>
   </div>
